--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
+
+# sqlite
+*.db
+*.db-journal
+*.sqlite
+
+# OS
+.DS_Store
+Thumbs.db
